# mira

./: .gitignore  ARCHITECTURE.md  README.md  build_dist.py  pyproject.toml
src/mira/: __init__.py  cli.py  main.py  query.py
src/mira/commands/: __init__.py  base.py  config_commands.py  dev_commands.py  session_commands.py  skill_command.py  utility_commands.py
src/mira/services/: mcp_client.py  plugins.py  skills.py
src/mira/services/api/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_compatible.py
src/mira/state/: app_state.py
src/mira/tools/: __init__.py  ai_tools.py  base.py  code_runner.py  command_tools.py  dev_tools.py  docker_tool.py  file_tools.py  git_tools.py  interactive_tools.py  notebook_tool.py  system_tools.py  task_tools.py  todo_tools.py
src/mira/utils/: config.py  context.py  cost.py  memory.py  permissions.py  sessions.py
src/mira/web/: __init__.py  server.py
src/mira/web/static/: index.html
